@@ -159,7 +159,7 @@ class SRFCalendar extends SMWResultPrinter {
 				// handle the 'color=' value, whether it came
 				// from a compound query or a regular one
 				// handling is different for SMW 1.5+
-				$realFunction = array( 'SMWQueryResult', 'getResults' );
+				$realFunction = array( $field, 'getResults' );
 				if ( is_callable( $realFunction ) ) {
 					$res_subject = $field->getResultSubject();
 					if ( isset( $res_subject->display_options )
