@@ -79,7 +79,7 @@ class SRFjqPlotPie extends SMWResultPrinter {
 		global $smwgJQueryIncluded, $srfgJQPlotIncluded;
 
 		if ( !$smwgJQueryIncluded ) {
-			$realFunction = array( 'OutputPage', 'includeJQuery' );
+			$realFunction = array( $wgOut, 'includeJQuery' );
 			if ( is_callable( $realFunction ) ) {
 				$wgOut->includeJQuery();
 			} else {
